# vidar-agent-

./: README.md  backup_repo.py  check_remaining_references.py  pyproject.toml  rename_to_vidar.py  requirements.txt  run_dry_rich.py  run_preview_apply.py  run_smoke_test.py  updated_file.txt  vidar.cmd  vidar.ps1  vidar_state.json
